--- a/Curs01/Ex01/css/style.css
+++ b/Curs01/Ex01/css/style.css
@@ -30,17 +30,51 @@ body {
   background-color: lightpink;
 }
 
+body > h1 {
+  display: none;
+}
 
 @media (max-width: 576px) {
-
+  .box-2 {
+    display: none;
+  }
 }
 
 @media (max-width: 768px) {
+  .box-3 {
+    border-color: green;
+    border-width: 5px;
+  }
 
+  .box-5 {
+    color: white;
+  }
 }
 
 @media (max-width: 992px) {
-
+  .box-4 {
+    display: none;
+  }
 }
 
+@media (min-width: 992px) {
+  .box-3 {
+    display: none;
+  }
 
+  .box-4 {
+    color: red;
+  }
+}
+
+@media (min-width: 1200px) {
+  .box-5 {
+    display: none;
+  }
+}
+
+@media (min-width: 600px) and (max-width: 1200px) {
+  body > h1 {
+    display: block;
+  }
+}
