uupdate curs1 html 2

--- a/Curs01/Ex03/css/style.css
+++ b/Curs01/Ex03/css/style.css
@@ -1,5 +1,11 @@
 picture {
   text-align: center;
+  margin: 0 auto;
+  display: block;
+}
+
+picture img {
+  width: 100%;
 }
 
 @media (min-width: 993px) {
