--- a/Curs01/Ex01/css/style.css
+++ b/Curs01/Ex01/css/style.css
@@ -34,7 +34,23 @@ body > h1 {
   display: none;
 }
 
+body > h2 {
+  display: none;
+}
+
+body > h3 {
+  display: none;
+}
+
 @media (max-width: 576px) {
+  body {
+    padding: 15px;
+  }
+
+  .box-1 {
+    display: none;
+  }
+
   .box-2 {
     display: none;
   }
@@ -52,12 +68,21 @@ body > h1 {
 }
 
 @media (max-width: 992px) {
+  .box-2 {
+    border: 1px solid yellow;
+    color: white;
+  }
+
   .box-4 {
     display: none;
   }
 }
 
 @media (min-width: 992px) {
+  .box-1 {
+    display: none;
+  }
+
   .box-3 {
     display: none;
   }
@@ -67,8 +92,24 @@ body > h1 {
   }
 }
 
+@media (min-width: 1000px) {
+  body > h3 {
+    color: red;
+  }
+}
+
+@media (min-width: 500px) and (max-width: 1000px) {
+  body > h2 {
+    display: block;
+  }
+}
+
 @media (min-width: 1200px) {
   .box-5 {
+    display: none;
+  }
+
+  body > h3 {
     display: none;
   }
 }
