--- a/Curs01/Ex08/css/style.css
+++ b/Curs01/Ex08/css/style.css
@@ -24,4 +24,42 @@
   background-color: blue;
 }
 
+.squares {
+  width: 80%;
+  border: 1px solid black;
+  padding: 10px;
+  margin: 0 auto;
+}
+
+.square, .square-red, .square-green, .square-blue, .square-purple, .square-peru, .square-magenta {
+  width: 200px;
+  height: 200px;
+  border: 1px solid black;
+  background-color: turquoise;
+}
+
+.square-magenta {
+  background-color: magenta;
+}
+
+.square-peru {
+  background-color: peru;
+}
+
+.square-purple {
+  background-color: purple;
+}
+
+.square-blue {
+  background-color: blue;
+}
+
+.square-green {
+  background-color: green;
+}
+
+.square-red {
+  background-color: red;
+}
+
 /*# sourceMappingURL=style.css.map */
