--- a/Curs02/Ex06/scss/app.scss
+++ b/Curs02/Ex06/scss/app.scss
@@ -9,3 +9,27 @@
   height: 150px;
   border: 1px solid #000;
 }
+
+$border-styles: dotted, solid, dashed, double, none;
+$sizes: (
+  'xs': 4px,
+  'sm': 8px,
+  'md': 16px,
+  'lg': 32px,
+);
+
+@each $style in $border-styles {
+  .b-#{$style} {
+    border-style: $style;
+  }
+}
+
+@each $class-name, $value in $sizes {
+  .m-#{$class-name} {
+    margin: $value;
+  }
+
+  .p-#{$class-name} {
+    padding: $value;
+  }
+}
