--- a/Curs02/Ex04/scss/app.scss
+++ b/Curs02/Ex04/scss/app.scss
@@ -9,3 +9,26 @@
   height: 150px;
   border: 1px solid #000;
 }
+
+@for $i from 1 through 5 {
+  .box-#{$i} {
+    border: #{$i}px solid black;
+  }
+}
+
+@for $i from 1 through 5 {
+  .box-0#{$i + 1} {
+    height: calc(150px + calc(#{$i} * 5px));
+    width: calc(150px + calc(#{$i} * 5px));
+  }
+}
+
+@for $i from 1 through 5 {
+  .box-#{$i*10} {
+    @if $i % 2 == 1 {
+      background-color: gray;
+    } @else {
+      background-color: transparent;
+    }
+  }
+}
