--- a/Curs09/Ex02/css/style.css
+++ b/Curs09/Ex02/css/style.css
@@ -48,3 +48,15 @@ body {
   color: #fff;
 }
 /* do not touch this */
+
+.flex-container-05 {
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: space-evenly;
+}
+
+.flex-container-06 {
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
