tema 5 aprilie partea 2

--- a/Curs07/Ex01/css/style.css
+++ b/Curs07/Ex01/css/style.css
@@ -1,3 +1,49 @@
+@keyframes bar-01 {
+  100% {
+    width: 100%;
+  }
+}
+
+.bar-01 {
+  animation: bar-04 10s ease-in;
+}
+
+@keyframes bar-02 {
+  100% {
+    width: 100%;
+  }
+}
+
+.bar-02 {
+  animation: bar-02 8s linear;
+}
+
+@keyframes bar-03 {
+  25% {
+    width: 100%;
+    background-color: blue;
+  }
+
+  50% {
+    width: 75%;
+    backgrpund-color: yellow;
+  }
+
+  75% {
+    width: 200px;
+    background-color: red;
+  }
+
+  100% {
+    width: 5px;
+    background-color: blue;
+  }
+}
+
+.bar-03 {
+  animation: bar-03 12s ease-in;
+}
+
 @keyframes bar-04 {
   25% {
     background-color: red;
@@ -47,4 +93,14 @@
 
 .bar-05 {
   animation: bar-05 8s linear;
+}
+
+@keyframes bar-06 {
+  100% {
+    width: 100%;
+  }
+}
+
+.bar-06 {
+  animation: bar-04 4s ease-in;
 }
