--- a/Curs09/Ex02/css/style.css
+++ b/Curs09/Ex02/css/style.css
@@ -49,6 +49,30 @@ body {
 }
 /* do not touch this */
 
+.flex-container-01 {
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.flex-container-02 {
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-end;
+}
+
+.flex-container-03 {
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.flex-container-04 {
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .flex-container-05 {
   flex-direction: column;
   align-items: flex-end;
