--- a/Curs09/Ex01/css/style.css
+++ b/Curs09/Ex01/css/style.css
@@ -38,9 +38,33 @@
 }
 /* do not touch this */
 
+.flex-container-01 {
+  justify-content: center;
+  align-items: center;
+  flex-direction: row-reverse;
+}
+
+.flex-container-02 {
+  justify-content: flex-end;
+  align-items: flex-end;
+  flex-direction: row-reverse;
+}
+
 .flex-container-03 {
   justify-content: space-between;
   align-items: center;
+  flex-direction: row-reverse;
+}
+
+.flex-container-04 {
+  justify-content: flex-end;
+  align-items: flex-start;
+  flex-direction: row-reverse;
+}
+
+.flex-container-05 {
+  justify-content: space-around;
+  align-items: flex-end;
   flex-direction: row-reverse;
 }
 
