--- a/Curs09/Ex09/css/style.css
+++ b/Curs09/Ex09/css/style.css
@@ -57,3 +57,75 @@ body {
   left: 10px;
 }
 /* do not touch this */
+
+.flex-container-01 {
+  flex-direction: column-reverse;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+
+.flex-container-01 div:nth-child(2) {
+  flex-shrink: 2;
+}
+
+.flex-container-02 {
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.flex-container-02 div:nth-child(2) {
+  flex-shrink: 2;
+}
+
+.flex-container-02 div:nth-child(5) {
+  flex-shrink: 3;
+}
+
+.flex-container-03 {
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: flex-start;
+}
+
+.flex-container-03 div:nth-child(3) {
+  flex-shrink: 2;
+}
+
+.flex-container-04 {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.flex-container-04 div:nth-child(3) {
+  flex-shrink: 3;
+}
+
+.flex-container-04 div:nth-child(4) {
+  flex-shrink: 2;
+}
+
+.flex-container-05 {
+  flex-direction: column-reverse;
+  justify-content: space-around;
+  align-items: flex-end;
+}
+
+.flex-container-05 div:nth-child(3) {
+  flex-shrink: 3;
+}
+
+.flex-container-05 div:nth-child(4) {
+  flex-shrink: 2;
+}
+
+.flex-container-06 {
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.flex-container-06 div:nth-child(5) {
+  flex-shrink: 2;
+}
