--- a/Curs09/Ex05/css/style.css
+++ b/Curs09/Ex05/css/style.css
@@ -48,3 +48,63 @@ body {
   color: #fff;
 }
 /* do not touch this */
+
+.flex-container-01 {
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+
+.flex-container-01 div:last-child {
+  align-self: flex-start;
+}
+
+.flex-container-02 {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.flex-container-02 div:nth-of-type(5) {
+  align-self: flex-end;
+}
+
+.flex-container-03 {
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: flex-start;
+}
+
+.flex-container-03 div:nth-of-type(4) {
+  align-self: stretch;
+}
+
+.flex-container-04 {
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.flex-container-04 div:nth-child(5) {
+  align-self: flex-start;
+}
+
+.flex-container-05 {
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.flex-container-05 div:nth-child(4) {
+  align-self: stretch;
+}
+
+.flex-container-06 {
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-start;
+}
+
+.flex-container-06 div:nth-child(3) {
+  align-self: flex-end;
+}
