--- a/Curs09/Ex07/css/style.css
+++ b/Curs09/Ex07/css/style.css
@@ -48,3 +48,68 @@ body {
   color: #fff;
 }
 /* do not touch this */
+.flex-container-01 {
+  flex-direction: column-reverse;
+  align-items: center;
+}
+
+.flex-container-01 div:nth-child(5) {
+  flex-grow: 1;
+}
+
+.flex-container-01 div:nth-child(3) {
+  flex-grow: 2;
+}
+
+.flex-container-02 {
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.flex-container-02 div:nth-child(2) {
+  flex-grow: 1;
+}
+
+.flex-container-03 {
+  flex-direction: column-reverse;
+  align-items: flex-start;
+}
+
+.flex-container-03 div:nth-child(2) {
+  flex-grow: 2;
+}
+
+.flex-container-03 div:nth-child(4) {
+  flex-grow: 1;
+}
+
+.flex-container-04 {
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.flex-container-04 div:nth-child(2) {
+  flex-grow: 1;
+}
+
+.flex-container-05 {
+  flex-direction: column-reverse;
+  align-items: center;
+}
+
+.flex-container-05 div:nth-child(3) {
+  flex-grow: 2;
+}
+
+.flex-container-05 div:nth-child(4) {
+  flex-grow: 1;
+}
+
+.flex-container-06 {
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.flex-container-06 div:nth-child(5) {
+  flex-grow: 1;
+}
