--- a/Curs09/Ex08/css/style.css
+++ b/Curs09/Ex08/css/style.css
@@ -1,7 +1,7 @@
 /* do not touch this */
 .flex-container {
-  width: 85%; 
-  height: 200px; 
+  width: 85%;
+  height: 200px;
   border: 1px solid #000;
   margin: 25px auto;
   display: flex;
@@ -13,40 +13,112 @@
 }
 
 .flex-item {
-  display: flex; 
+  display: flex;
   justify-content: center;
   align-items: center;
   flex-basis: 200px;
-  height: 75px; 
-  border: 1px solid red; 
+  height: 75px;
+  border: 1px solid red;
   background-color: #000;
-  color: #fff; 
+  color: #fff;
   font-weight: bold;
   font-size: 22px;
 }
 
 .underlay {
-  position: absolute; 
-  top: 0; 
-  left: 0; 
-  bottom: 0; 
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
   right: 0;
   background-color: lightblue;
-  display: flex; 
+  display: flex;
   align-items: center;
   justify-content: center;
   z-index: -1;
   font-size: 150px;
-  font-weight: bold; 
+  font-weight: bold;
   color: #fff;
 }
 
 #shrinker {
   width: 100px;
-  height: 40px; 
+  height: 40px;
   background-color: lightblue;
   position: fixed;
   top: 10px;
   left: 10px;
 }
 /* do not touch this */
+
+.flex-container-01 {
+  align-items: flex-end;
+  justify-content: space-around;
+}
+
+.flex-container-01 div:nth-child(2) {
+  flex-shrink: 2;
+}
+
+.flex-container-02 {
+  flex-direction: row-reverse;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.flex-container-02 div:nth-child(2) {
+  flex-shrink: 2;
+}
+
+.flex-container-02 div:nth-child(4) {
+  flex-shrink: 3;
+}
+
+.flex-container-03 {
+  align-items: flex-end;
+  justify-content: flex-end;
+}
+
+.flex-container-03 div:nth-child(3) {
+  flex-shrink: 2;
+}
+
+.flex-container-03 div:nth-child(5) {
+  flex-shrink: 3;
+}
+
+.flex-container-04 {
+  flex-direction: row-reverse;
+  align-items: flex-end;
+  justify-content: flex-end;
+}
+
+.flex-container-04 div:nth-child(4) {
+  flex-shrink: 2;
+}
+
+.flex-container-04 div:nth-child(3) {
+  flex-shrink: 3;
+}
+
+.flex-container-05 {
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.flex-container-05 div:nth-child(2) {
+  flex-shrink: 2;
+}
+
+.flex-container-06 {
+  align-items: center;
+  justify-content: space-around;
+}
+
+.flex-container-06 div:nth-child(5) {
+  flex-shrink: 0;
+}
+
+.flex-container-06 div:nth-child(3) {
+  flex-shrink: 3;
+}
