--- a/Curs09/Ex10/css/style.css
+++ b/Curs09/Ex10/css/style.css
@@ -1,7 +1,7 @@
 /* do not touch this */
 .flex-container {
-  width: 85%; 
-  height: 200px; 
+  width: 85%;
+  height: 200px;
   border: 1px solid #000;
   margin: 25px auto;
   display: flex;
@@ -9,31 +9,98 @@
 }
 
 .flex-item {
-  display: flex; 
+  display: flex;
   justify-content: center;
   align-items: center;
-  width: 75px; 
-  height: 75px; 
-  border: 1px solid red; 
+  width: 75px;
+  height: 75px;
+  border: 1px solid red;
   background-color: #000;
-  color: #fff; 
+  color: #fff;
   font-weight: bold;
   font-size: 22px;
 }
 
 .underlay {
-  position: absolute; 
-  top: 0; 
-  left: 0; 
-  bottom: 0; 
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
   right: 0;
   background-color: lightblue;
-  display: flex; 
+  display: flex;
   align-items: center;
   justify-content: center;
   z-index: -1;
   font-size: 150px;
-  font-weight: bold; 
+  font-weight: bold;
   color: #fff;
 }
 /* do not touch this */
+
+.flex-container-01 {
+  flex-direction: row-reverse;
+}
+
+.flex-container-01 div:nth-child(2) {
+  order: 4;
+}
+
+.flex-container-02 div:last-child {
+  order: 1;
+}
+
+.flex-container-02 div:nth-child(4) {
+  order: 2;
+}
+
+.flex-container-02 div:nth-child(3) {
+  order: 4;
+}
+
+.flex-container-02 div:nth-child(2) {
+  order: 3;
+}
+
+.flex-container-03 {
+  flex-direction: row-reverse;
+}
+
+.flex-container-03 div:nth-child(4) {
+  order: 4;
+}
+
+.flex-container-04 {
+  flex-direction: row-reverse;
+}
+
+.flex-container-04 div:nth-child(3) {
+  order: 4;
+}
+
+.flex-container-04 div:nth-child(2) {
+  order: 3;
+}
+
+.flex-container-05 {
+  flex-direction: row-reverse;
+}
+
+.flex-container-05 div:nth-child(2) {
+  order: 3;
+}
+
+.flex-container-05 div {
+  order: 2;
+}
+
+.flex-container-05 div:nth-child(4) {
+  order: 1;
+}
+
+.flex-container-06 div {
+  order: 2;
+}
+.flex-container-06 div:nth-child(3) {
+  order: 1;
+}
