--- a/Curs09/Ex11/css/style.css
+++ b/Curs09/Ex11/css/style.css
@@ -48,3 +48,95 @@ body {
   color: #fff;
 }
 /* do not touch this */
+
+.flex-container-01 {
+  flex-direction: column-reverse;
+}
+
+.flex-container-01 :nth-child(2) {
+  order: 1;
+}
+
+.flex-container-02 {
+  flex-direction: column;
+}
+
+.flex-container-02 :nth-child(2) {
+  order: 3;
+}
+
+.flex-container-02 :nth-child(3) {
+  order: 4;
+}
+
+.flex-container-02 :nth-child(4) {
+  order: 2;
+}
+
+.flex-container-02 :last-child {
+  order: 1;
+}
+
+.flex-container-03 {
+  flex-direction: column-reverse;
+}
+
+.flex-container-03 :nth-child(4) {
+  order: 4;
+}
+
+.flex-container-04 {
+  flex-direction: column;
+}
+
+.flex-container-04 :nth-child(3) {
+  order: 1;
+}
+
+.flex-container-04 :nth-child(2) {
+  order: 2;
+}
+
+.flex-container-04 :nth-child(4) {
+  order: 4;
+}
+
+.flex-container-04 :last-child {
+  order: 3;
+}
+
+.flex-container-05 {
+  flex-direction: column-reverse;
+}
+
+.flex-container-05 :nth-child(2) {
+  order: 4;
+}
+
+.flex-container-05 :nth-child(5) {
+  order: 3;
+}
+
+.flex-container-05 :nth-child(3) {
+  order: 2;
+}
+
+.flex-container-06 {
+  flex-direction: column;
+}
+
+.flex-container-06 :nth-child(2) {
+  order: 2;
+}
+
+.flex-container-06 :nth-child(3) {
+  order: 1;
+}
+
+.flex-container-06 :nth-child(4) {
+  order: 3;
+}
+
+.flex-container-06 :nth-child(5) {
+  order: 4;
+}
