--- a/Curs11/Ex05/css/style.css
+++ b/Curs11/Ex05/css/style.css
@@ -22,3 +22,28 @@
 }
 
 /* can't touch this 🔨 */
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 120px 1fr 20% 315px 200px 2fr;
+  grid-template-rows: 100px 75px 200px 150px 75px;
+}
+
+.grid-item-1 {
+  grid-column: 1 / span 4;
+}
+
+.grid-item-2 {
+  grid-column: -2 / -1;
+  grid-row: 1 / 4;
+}
+
+.grid-item-3 {
+  grid-column: 1 / 4;
+  grid-row: 2 / 5;
+}
+
+.grid-item-4 {
+  grid-column: 3 / span 3;
+  grid-row: -3 / -1;
+}
