--- a/Curs11/Ex13/css/style.css
+++ b/Curs11/Ex13/css/style.css
@@ -18,11 +18,55 @@
 }
 
 .grid-item-4 {
-  background-color: lightsalmon
+  background-color: lightsalmon;
 }
 
 /* can't touch this 🔨 */
 
+.grid-container {
+  width: 100%;
+  max-width: 1920px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-areas:
+    'header header header header '
+    'sidebar . content content'
+    'sidebar . content content '
+    'footer footer footer footer ';
+}
 
+.grid-item-1 {
+  grid-area: header;
+}
 
+.grid-item-2 {
+  grid-area: content;
+}
 
+.grid-item-3 {
+  grid-area: sidebar;
+}
+
+.grid-item-4 {
+  grid-area: footer;
+}
+
+@media (max-width: 768px) {
+  .grid-container {
+    grid-template-areas:
+      'header header header header '
+      'sidebar . content content'
+      'sidebar . content content '
+      'sidebar footer footer footer ';
+  }
+}
+
+@media (max-width: 520px) {
+  .grid-container {
+    grid-template-areas:
+      'header'
+      'content'
+      'sidebar'
+      'footer';
+  }
+}
